--- a/_config.yml
+++ b/_config.yml
@@ -12,20 +12,20 @@ baseurl: "/sdg-indicators" # the subpath of your site, e.g. /blog
 url: ""
 data_dir: data
 environment: staging
-remotedatabaseurl: "https://sdg.mango-solutions.com/data/not-applicable"
+remotedatabaseurl: "https://sdg.mango-solutions.com/data/notapplicable"
 # permalink: /news/:year/:month/:day/:title.html
 
 jekyll_get_json:
   - data: meta
-    json: 'https://sdg.mango-solutions.com/data/not-applicable/meta/all.json'
+    json: 'https://sdg.mango-solutions.com/data/notapplicable/meta/all.json'
     # cache: true
     # directory: 'remotedata'
   - data: headlines
-    json: 'https://sdg.mango-solutions.com/data/not-applicable/headline/all.json'
+    json: 'https://sdg.mango-solutions.com/data/notapplicable/headline/all.json'
     # cache: true
     # directory: 'remotedata'
   - data: schema
-    json: 'https://sdg.mango-solutions.com/data/not-applicable/meta/schema.json'
+    json: 'https://sdg.mango-solutions.com/data/notapplicable/meta/schema.json'
   - data: reporting
     json: 'https://ONSdigital.github.io/sdg-data/stats/reporting.json'
   - data: translations
